--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ h2 {
   margin: 0;
 }
 
+#winning-phrase {
+  font-size: 25px;
+  margin: 15px 0;
+}
+
 h1 {
   font-size: 30px;
 }
@@ -171,6 +176,7 @@ button {
   left: 0;
   right: 0;
   border-radius: 5px;
+  transition: 0.4s opacity ease-in;
 }
 
 .title {
